ingress-deploy-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
spec:
  replicas: 3
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: home
        image: ndrohith09/django-ingress
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: home-svc 
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: home

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: page 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: page
  template:
    metadata:
      labels:
        app: page
    spec:
      containers:
      - name: page
        image: ndrohith09/django-ingress
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: page-svc 
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: page
